# pho

./: .gitignore  Cargo.toml  README.md  _config.yml  example_dataset_aline.csv
.dev/: actual_aline.py
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  enhancement.yml  request.yml
docs/: index.md
docs/dev/: ensemble.md
examples/: 01_configs.rs  02_algorithm.rs  03_ensemble.rs  04_01_ga_intro.rs  04_02_ga_extreme_case.rs  04_optimize_ga.rs  README.md  algorithm.rs  aline_dataset.rs  configs.rs  dataset.rs  ensemble.rs  ga_extreme_case.rs  ga_intro.rs  kondrak.rs  mass_precompute.rs
examples/data/: aline_dataset.csv  dataset.csv  sample_lasa.csv
src/: config_io.rs  error.rs  errors.rs  lib.rs  main.rs
src/algorithms/: dispatcher.rs  errors.rs  lcs.rs  lcsuf.rs  mod.rs  registry.rs  traits.rs  wrapper.rs  wrappers.rs
src/dataset/: mod.rs  row.rs  score_matrix.rs  types.rs
src/ensemble/: config.rs  mod.rs  similarity.rs  types.rs  weighted_function.rs
src/ipa/: README.md  mapper.rs  mod.rs  symbols.rs
src/learning/: .gitkeep  (+2 more)
tests/: algorithm_aline.rs  algorithm_bisim.rs  algorithm_editex.rs  algorithm_jaro_winkler.rs  algorithm_levenshtein.rs  algorithm_ngram.rs  algorithm_prefix.rs  aline_parser.rs  aline_parser_data.toml  aline_similarity.rs  config_parser_aline.rs  config_parser_aline_data.toml  config_parser_editex.rs  config_sample_aline.toml  config_sample_bisim.toml  config_sample_editex.toml  config_sample_jaro_winkler.toml  config_sample_levenshtein.toml  config_sample_ngram_xayb.toml  config_sample_prefix.toml  editex_similarity.rs
(+75 files in other folders)
