[package]
name = "pho"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.2.0"
csv = "1.4.0"
enum-map = { version = "2.7.3", features = ["serde"]}
once_cell = "1.21.4"
rand = "0.8"
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.0"
unicode-segmentation = "1.11.0"
